# The-AI-Cowboys---6-Shooter

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  TECHNICAL_OMNIBUS.md  config.toml  docker-compose.yml
benches/: ntt_bench.rs
contracts/: FlashArbitrage.sol  ProfitVault.sol
deploy/: Dockerfile  Dockerfile.offramp  README.md  install.sh  package.sh  prometheus.yml  smoke_test.sh  yield-daemon.service
orchestrator/: __init__.py  offramp.py
src/: config.rs  lib.rs  main.rs
src/memory/: arena.rs  cache.rs  mod.rs
src/mev/: amm.rs  aste.rs  bundle.rs  executor.rs  graph.rs  mempool.rs  mod.rs  router.rs  simd_solver.rs  solver.rs  state_shadow.rs
src/ml_subnet/: inference.rs  miner.rs  mod.rs  training.rs
src/net/: mod.rs  p2p.rs  rpc.rs  solana.rs
src/treasury/: keeper.rs  mod.rs  offramp.rs  vault.rs
src/zk_prover/: fields.rs  mod.rs  montgomery.rs  msm.rs  ntt.rs  prover.rs
