[package]
name = "yield-daemon"
version = "0.1.0"
edition = "2021"
description = "Autonomous yield infrastructure with live Solana execution, Jito MEV bundles, ZK proving, ML inference, and crypto-to-bank treasury pipeline"
authors = ["Michael Pendleton"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto / HMAC signing for exchange APIs
hmac = "0.12"
hex = "0.4"

# Ed25519 signing for Solana transactions
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Crypto / finite field arithmetic
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-std = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
sha2 = "0.10"
blake3 = "0.3"

# Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Data structures
dashmap = "5"
crossbeam = "0.8"
parking_lot = "0.12"

# SIMD
packed_simd_2 = { version = "0.3", optional = true }

# Logging / metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
prometheus = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"

# Error handling
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[features]
default = []
avx512 = []
simd = ["packed_simd_2"]
cuda = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
# NOTE: target-cpu is intentionally NOT pinned to "native" — that bakes in the
# build host's exact ISA and makes the binary non-portable (SIGILL on other
# CPUs), which defeats a standalone/deployable artifact. For single-host max
# performance build with: RUSTFLAGS="-C target-cpu=native" cargo build --release

[profile.bench]
opt-level = 3
lto = "thin"

[[bench]]
name = "ntt_bench"
harness = false

[[bin]]
name = "yield-daemon"
path = "src/main.rs"
